--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-clip==0.2.0
-faiss==1.7.3
-numpy==1.20.3
-pandas==1.3.4
-scikit_image==0.19.3
-scikit_learn==1.2.1
-scipy==1.7.1
-timm==0.6.11
-torch==1.10.1
-torchvision==0.11.2
-tqdm==4.62.3
+clip>=0.2.0
+faiss-gpu
+numpy>=1.20.3
+pandas>=1.3.4
+scikit_image>=0.19.3
+scikit_learn>=1.2.1
+scipy>=1.7.1
+timm>=0.6.11
+torch>=1.10.1
+torchvision>=0.11.2
+tqdm>=4.62.3
